syntax = "proto3";

import "google/protobuf/empty.proto";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  int64 userId = 3;
}

message JwtToken {
  string token = 1;
}

message VerifyTokenResponse{
  int64 userId = 1;
  string authLevel = 2;
  string email = 3;
  bool isTokenValid = 4;
}

message VerifyEmailRequest{
  string emailCode = 1;
}

message EmailMessage{
  string email = 1;
}

message UserId{
  int64 userId = 1;
}

service AuthenticationService{
  rpc login(LoginRequest) returns (JwtToken);
  rpc register(RegisterRequest) returns (google.protobuf.Empty);
  rpc verifyToken(JwtToken) returns (VerifyTokenResponse);
  rpc verifyEmail(VerifyEmailRequest) returns (google.protobuf.Empty);
  rpc getUserId(EmailMessage) returns (UserId);
}